manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gannet-namespace
  labels:
    istio-injection: enabled
