manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gannet
  namespace: gannet-namespace
  labels:
    app: gannet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gannet
  template:
    metadata:
      labels:
        app: gannet
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: gannet
        image: ghcr.io/drewpypro/gannet:latest
        ports:
        - containerPort: 80
