manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gannet
  namespace: gannet-namespace
spec:
  selector:
    app: gannet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
