manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gannet-virtual-service
  namespace: gannet-namespace
spec:
  hosts:
    - gannet.drewpy.pro
  gateways:
    - istio-system/ingress-gateway
  http:
      - route:
        - destination:
            host: gannet
            port:
              number: 80
